<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ezshop.blumix.com.ezshop.pgthree">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/namet"
        android:ems="10"
        android:id="@+id/editText4"
        android:layout_above="@+id/editText5"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignStart="@+id/editText5"
        android:layout_marginBottom="60dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:text="@string/phonet"
        android:ems="10"
        android:id="@+id/editText5"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="214dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/logi"
        android:id="@+id/textView3"
        android:textSize="40dp"
        android:fontFamily="serif"

        android:layout_above="@+id/editText4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="78dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="let's go"
        android:id="@+id/button2"
        android:background="#0000000"
        android:layout_marginBottom="101dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignStart="@+id/editText5"
        android:layout_alignRight="@+id/editText5"
        android:layout_alignEnd="@+id/editText5" />
</RelativeLayout>
